[project]
name = "teisatsu"
version = "0.1.0"
description = "will find everything"
readme = "README.md"
authors = [
    { name = "wandderq", email = "wanddr.qq@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "validators>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"


[project.scripts]
teicli = "teisatsu.core._cli:run_teisatsu"


[project.optional-dependencies]
domain = ["python-whois"]
credit_card = []
email = []
iban = []
ip = []
url = []


all = [
    "teisatsu[domain]",
    "teisatsu[credit_card]",
    "teisatsu[email]",
    "teisatsu[iban]",
    "teisatsu[ip]",
    "teisatsu[url]",

]