[project]
name = "teisatsu"
version = "1.4.1"
description = "will find everything"
readme = "README.md"
authors = [
    { name = "wandderq", email = "wanddr.qq@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "validators>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
teisatsu = "teisatsu.core.cli:launch_cli"


[project.optional-dependencies]
net = [
    "requests",
    "cloudscraper",
    "fake-useragent",
    "python-whois",
]
